tests/comp/sem/invalid/undefined_field.mj
class A {

	public void test(A a) {
		a /*** .test ***/;
	}

	public static void main(String[] args) {
	}

}
